css/style.css
@font-face {
    font-family: 'title';
    src: url('font/SpecialGothicExpandedOne-Regular.ttf') format("truetype"),
}

@font-face {
    font-family: 'variable';
    src: url('font/ClashGrotesk-Variable.woff2') format("woff2 supports variations"),
         url('font/ClashGrotesk-Variable.woff2') format("woff2-variations");
    font-weight: 100 1000;
  }

:root {
    --color: 0, 0%, 86%;
    --color2: 0, 0%, 26%;
    --gap: 1rem;
    --width: 100px;


    font-family: 'variable';
    font-size: 10px;
    font-smoothing: antialiased;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    text-rendering: optimizeLegibility;

    color: hsl(var(--color));
    background-color: hsl(var(--color2));
}

button, input[type="submit"], input[type="reset"] {
	background: none;
	color: inherit;
	border: none;
	padding: 0;
    font-size: inherit;
	cursor: pointer;
	outline: inherit;
}

body, h2, h3, p {
    font-size: 1rem;
    margin: 0;
    padding: 0;
}

h2, h3, button{
    text-transform: uppercase;
}

h2, h3, button {
    box-sizing: border-box;
    padding-top: 0.15em;
    vertical-align: middle;
    line-height: 0;
}

h2, button {
    font-family: 'variable';
    font-variation-settings: "wght" 400;
    transition: font-variation-settings 400ms ease-in-out;
}

.title {
    width: 100%;
    max-width: 150px;
}

main {
    display: grid;
    box-sizing: border-box;
    justify-items: center;
    height: 100dvh;
    width: 100vw;
    grid-template-rows: auto 1fr;
}

header {
    width: fit-content;
	max-width: calc(var(--width) * 6);
    display: grid;
    row-gap: var(--gap);
    justify-items: center;
    padding-block: var(--gap);
    box-sizing: border-box;
    background: var(--color2);
}

button {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 1rem;
}

button::before {
    display: block;
}

div.expander.active button::before {
    content: "×";
    font-size: 2rem;
    font-variation-settings: "wght" 300;
}

.expander.about button::before {
    content: "about";
}

.expander.info button::before {
    content: "info";
}

.information {
    display: grid;
    grid-template-rows: 0fr;
    transition: grid-template-rows 400ms;
}

.information p {
    text-align: justify;
    text-wrap: pretty;
    text-justify: inter-character;
    text-align-last: center;
    hyphens: auto;
    font-size: 1.1rem;
    margin-block: calc(var(--gap) * 0.6);
    margin-inline: calc(var(--gap) * 2);
    max-width: calc(var(--width) * 4);
}

.information > div {
    overflow: hidden;
}

.expander.active .information {
    grid-template-rows: 1fr;
}

.expander {
    display: grid;
    justify-content: center;
    transition: padding-block 400ms;
}

.expander.active {
    padding-block: calc(var(--gap) * 2);
}

.expander:nth-of-type(1){
    margin-bottom: 2rem;
}

.arrow {
    height: 0.6rem;
    margin-top: calc(var(--gap) * 2);
    margin-bottom: 0.1rem;
}

.marquee, .track, .item, .part {
    box-sizing: border-box;
    display: flex;
    align-items: center;
}

.marquee, .item {
    justify-content: center;
}

.marquee {
	overflow: hidden;
    width: 100%;
    height: 1rem;
}
.track {
    width: fit-content;
    height: 100%;
}
.part {
    height: 100%;
    width: fit-content;
} 
.item {
    height: 70%;
    border-right: 1px solid hsla(var(--color), 0.3);
    width: var(--width);
    flex-shrink: 0;
    will-change: transform;
}

.item h2 {
    /* font-size: 0.9rem; */
    transition: all 300ms;
}

.item.active h2{
    color: hsla(var(--color), 1);
    font-variation-settings: "wght" 900;
}

.item.wide {
    width: calc(var(--width) * 2);
}

.loading-container {
    font-size: 1.4rem;
    box-sizing: border-box;
    z-index: 10000;
    display: flex;
    justify-content: center;
    align-items: center;
    position: absolute;
    background: hsl(var(--color2));
    width: 100%;
    height: 100%;
}

.canvas-container, #canvas {
    box-sizing: border-box;
    width: 100%;
    height: 100%;
}

.canvas-container {
    display: flex;
    justify-content: center;
    align-items: center;
    overflow: hidden;
}

#canvas {
    display: block;
    object-fit: cover;
}

@media (min-width: 500px) {
    :root {
        --gap: 0.5rem;
        font-size: 11px;
    }

    .expander:nth-of-type(1){
        margin-bottom: 0rem;
    }   

    .work {
        margin-bottom: calc(var(--gap) / 2);
    }

}

@keyframes test {
    0%{font-variation-settings: "wght" 400;}
    100%{font-variation-settings: "wght" 600;}
}

